--- a/MovieProject/app/src/main/res/layout/fragment_cast.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_cast.xml
@@ -1,219 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00000000"
-        android:progressBackgroundTint="?attr/colorOnPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- Other views or layouts if needed -->
 
-
-
-    <ScrollView
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.Toolbar
-
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="#00000000"
-                android:elevation="4dp"
-                android:theme="@style/AppTheme.Toolbar"
-                android:visibility="gone"
-                app:navigationIcon="?attr/homeAsUpIndicator"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <ImageView
-                android:id="@+id/backdrop_cast_photo"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:visibility="gone"
-                android:foreground="@drawable/gradient_foreground"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf = "parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <ImageView
-                android:id="@+id/cast_photo"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:visibility="gone"
-                app:layout_constraintTop_toTopOf="@id/backdrop_cast_photo"
-                android:background="@drawable/circle_24"
-                app:layout_constraintStart_toStartOf = "parent"
-                app:layout_constraintBottom_toBottomOf="@id/divider2"
-                app:layout_constraintEnd_toEndOf="parent"
-
-                />
-
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:visibility="gone"
-                android:layout_marginTop="6dp"
-                android:id="@+id/recycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movies"
-                app:layout_constraintStart_toStartOf="parent"
-                android:orientation="horizontal"
-                />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/backdrop_cast_photo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-
-            <TextView
-                android:id="@+id/career"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-
-            <View
-                android:id="@+id/divider2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/career"
-                android:background="?android:attr/listDivider"
-                />
-
-
-            <TextView
-                android:id="@+id/born"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/material_color_blue_grey_500"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider2"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"
-                android:layout_marginEnd="6dp"
-                android:layout_marginBottom="2dp"/>
-
-            <TextView
-                android:id="@+id/from"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:maxLines="2"
-                android:textColor="@color/material_color_blue_grey_500"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/born"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:visibility="gone"
-                android:layout_marginEnd="6dp"
-                android:layout_marginBottom="2dp"/>
-
-            <TextView
-                android:id="@+id/biography_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/biography"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"
-                android:textStyle="bold"
-                android:textColor="@color/material_color_blue_grey_500"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/from"
-                android:layout_marginTop="10dp"
-                android:visibility="gone"
-                android:layout_marginEnd="6dp"
-                android:layout_marginBottom="2dp"/>
-
-
-            <TextView
-                android:id="@+id/biography"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textColor="@color/material_color_blue_grey_300"
-                android:textSize="17sp"
-                android:ellipsize="end"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/biography_text" />
-
-
-
-            <TextView
-                android:id="@+id/movies"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Movies"
-                android:textColor="@color/material_color_blue_grey_500"
-                android:ellipsize="end"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/biography"
-                app:layout_constraintStart_toStartOf="parent"/>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout >
-
-    </ScrollView>
-
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
